Shiptastic debug mode + prevent add to cart variation layout shift.

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -195,6 +195,14 @@ body.theme-astra {
   }
 }
 
+form.cart.wc-gzd-replace-price {
+  .single_variation_wrap {
+    .woocommerce-variation-price {
+      display: none;
+    }
+  }
+}
+
 .deposit-packaging-type {
   text-transform: uppercase;
   font-weight: bold;
